Added artifact end points
